# egd-dlms

./: .gitignore  Dockerfile  LICENSE  README.md  config.yaml  listener.py~  listener_old.py  obis.yaml  pyproject.toml  replay.py
.github/workflows/: ci.yml
app/: dlms_parser.py  mqtt_client.py  obis.py  tcp_client.py
docs/: architecture.md  home-assistant-cs.md  home-assistant.md  installation-cs.md  installation.md  protocol.md  roadmap.md
docs/rfc/: 0001-core-models.md
examples/: config.remote-mqtt.yaml  docker-compose.standalone.yml
src/egd_dlms/: config.py  connection_monitor.py  decode.py  decoder.py  diagnostics.py  discovery.py  dump.py  logger.py  main.py  meter.py  models.py  mqtt.py  parser.py  recorder.py  replay.py  runtime_state.py  status.py
src/egd_dlms.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/egd_dlms/dlms/: axdr.py  cosem.py  parser.py  types.py
tests/: test_decode_last_frame.py
tests/data/: expected_status.json  sample_push_frame.hex
